@startuml Import Account Variant - Class Diagram
!define ENTITY_COLOR #E8F5E9

skinparam backgroundColor #FAFAFA
skinparam linetype ortho
skinparam nodesep 80
skinparam ranksep 100
skinparam padding 10
skinparam classBackgroundColor ENTITY_COLOR
skinparam classBorderColor #81C784
skinparam arrowThickness 1.5

' Title
title Import Account Variant - Class Diagram\nEntity Level - Relationships Focus

' =============== ENTITIES ===============

class User <<Entity>>

class Category <<Entity>>

class Product <<Entity>>

class ProductVariant <<Entity>>

class ProductVariantAccount <<Entity>>

' =============== MAIN RELATIONSHIPS ===============

User "1" -right-> "0..*" Product : <<seller>>

Category "1" -down-> "0..*" Product : <<has>>

Product "1" *-down-> "0..*" ProductVariant : <<has>>

ProductVariant "1" *-down-> "0..*" ProductVariantAccount : <<has>>

' =============== AUDIT TRAIL RELATIONSHIPS ===============


User "0..1" ..> "0..1" Product : <<audit>>

User "0..1" ..> "0..1" ProductVariant : <<audit>>

User "0..1" ..> "0..1" ProductVariantAccount : <<audit>>

' =============== LEGEND ===============

legend right
  |= Symbol |= Meaning |
  | ——————> | Association |
  | ——◆——> | Composition |
  | ······> | Dependency (audit trail) |

  **Main Flow:**
  User (Seller) → Product → ProductVariant → ProductVariantAccount

  **Audit Trail:**
  User tracks createdBy/deletedBy for all entities
end legend

@enduml

